# PUBLIC_ARCHIVE-SC4021-China_Travel_Opinion_Search_Engine

./: .env.example  .gitattributes  .gitignore  README.md  SC4021 Video Script.md  config_processing.py  requirements.txt  vercel.json
briefing/: generate_briefing.py
classification/: ablation_study.py  aspect_sentiment.py  categorize_posts.py  city_ranking.py  evaluate.py  sentiment_pipeline.py  write_sentiment_to_supabase.py
cleaning/: data_cleaner.py  image_classifier.py  image_processor.py  location_mapping.py  pinterest_backfill.py  pipeline.py
crawling/: __init__.py  backfill_carousel.py  china_travel_hashtags.py  comment_scraper.py  ig_chrome_scraper.py  ig_scraper.py  ig_scraper_v2.py  run_parallel_pinterest.py
crawling/pinterest_miner/: __init__.py  __main__.py  cli.py  constants.py  daemon.py  pyproject.toml  scraper.py  storage.py
evaluation/: benchmark_queries.py  benchmark_throughput.py  compute_iaa.py  corpus_stats.py  coverage_analysis.py  eval_metrics.py  eval_supabase_agreement.py  evaluate_pipeline.py  generate_annotation_dataset.py  generate_eval.py  generate_report_figures.py  migrate_categories.py  model_comparison.py  populate_model_sentiment.py  random_accuracy_test.py  standardize_eval_format.py  tune_deep.py  tune_refined.py  tune_thresholds.py
frontend/: index.html
indexing/: data_import.py  es_client.py  mappings.py  update_categories_to_es.py  update_cleaned_fields.py  update_dedup_to_es.py
scripts/: export_to_huggingface.py  fetch_sentiment_counts.sql  run_sql.py
search/: __main__.py  api.py
(+6 files in other folders)
